p2/provisions/manifests/app1/app1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: html-volume
        configMap:
          name: app-one-html
          items:
          - key: index.html
            path: index.html
