p2/provisions/manifests/app1/app1.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-one-ingress
spec:
  ingressClassName: app-one-ingress
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-one
            port:
              number: 80
